--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -751,68 +751,96 @@
       track.scrollLeft = scrollLeft - walk;
     });
 
-    /* DADOS FAKE DOS PROJETOS */
+    /* DADOS DOS PROJETOS */
     const projetosData = {
       abrigo: {
-        titulo: "Lar de Siló",
-        img: "imagens/abrigo hannah.png",
-        texto: "Descrição fake do Lar de Siló. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vehicula lorem vel enim ultricies, eu tempus tellus consequat.",
-        acoes: [
-          "Acolhimento de mulheres e crianças",
-          "Atendimento psicossocial",
-          "Acompanhamento espiritual"
-        ],
-        recursos: "Precisamos de doações para manter o abrigo em funcionamento: alimentos, roupas, produtos de higiene, além de suporte financeiro para reformas.",
-        termometro: 40
-      },
+    titulo: "Lar de Siló",
+    img: "imagens/abrigo hannah.png",
+    texto: `<i>“O Senhor protege os estrangeiros e sustém o órfão e a viúva, mas frustra os propósitos dos ímpios.” – Salmos 146:9</i><br><br>
+    A guerra civil em Mianmar, iniciada após o golpe militar de 2021, mergulhou o país em um conflito devastador, resultando em milhares de mortos e milhões de deslocados. 
+    Muitas famílias, especialmente mulheres e crianças, passaram anos vivendo em acampamentos improvisados na floresta, fugindo da violência e da perseguição. 
+    Ao chegarem à Tailândia, encontram-se em situação de extrema vulnerabilidade, sem moradia ou assistência básica.<br><br>
+    O Lar de Siló existe para acolher essas mães e crianças, oferecendo um lugar seguro para recomeçar. 
+    Proporcionamos abrigo temporário e apoio emocional e espiritual, ajudando-as a reconstruírem suas vidas com dignidade.`,
+    acoes: [
+        "Aluguel de pequenos quartos para mulheres e crianças refugiadas",
+        "Acolhimento e suporte a famílias recém-chegadas à Tailândia",
+        "Acompanhamento psicossocial e apoio espiritual"
+    ],
+    recursos: "Precisamos de doações para manter o abrigo em funcionamento: aluguel, alimentos, roupas, produtos de higiene e suporte financeiro para novas famílias.",
+    termometro: 20
+},
       bolsa: {
-        titulo: "Sementes de Sabedoria",
-        img: "imagens/bolsa escola hannah.png",
-        texto: "Descrição fake da Sementes de Sabedoria. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer sed tempor leo.",
-        acoes: [
-          "Bolsas de estudos para crianças carentes",
-          "Kit de material escolar",
-          "Orientação familiar"
-        ],
-        recursos: "Arrecadação de fundos para cobrir taxas escolares e materiais. Também buscamos voluntários para reforço escolar.",
-        termometro: 60
-      },
-      fazenda: {
-        titulo: "Colhendo Fé",
-        img: "imagens/fazenda hannah.png",
-        texto: "Descrição fake da Colhendo Fé. Curabitur quis elit eget urna fermentum sodales. Donec eget felis nulla. Vivamus maximus urna id porta vehicula.",
-        acoes: [
-          "Cultivo de hortaliças",
-          "Criação de animais",
-          "Treinamento em agricultura sustentável"
-        ],
-        recursos: "Necessário investimento em equipamentos de irrigação, sementes, ração e manutenção de estruturas.",
-        termometro: 35
-      },
-      ingles: {
-        titulo: "Hannah English Course",
-        img: "imagens/ingles.png",
-        texto: "Descrição fake do Hannah English Course. Aulas interativas, conteúdos bíblicos e abordagem pedagógica inovadora para crianças, jovens e adultos.",
-        acoes: [
-          "Plataforma online de ensino",
-          "Aulas presenciais e virtuais",
-          "Uso de IA 'Samuel the Robot' (exemplo fictício)"
-        ],
-        recursos: "Ampliação de licenças de software, contratação de professores e material didático.",
-        termometro: 50
-      },
-      food: {
-        titulo: "Mesa de Bênçãos",
-        img: "imagens/food hannah.png",
-        texto: "Descrição fake do Mesa de Bênçãos. Fornecemos refeições diárias para famílias em situação de vulnerabilidade.",
-        acoes: [
-          "Distribuição de cestas básicas",
-          "Refeições comunitárias",
-          "Campanhas de arrecadação"
-        ],
-        recursos: "Precisamos de doações de alimentos, utensílios de cozinha e verba para logística e transporte.",
-        termometro: 80
-      },
+    titulo: "Sementes de Sabedoria",
+    img: "imagens/bolsa escola hannah.png",
+    texto: `<i>“Ensina a criança no caminho em que deve andar, e ainda quando for velho não se desviará dele.” – Provérbios 22:6</i><br><br>
+    Para as crianças birmanesas refugiadas na Tailândia, estudar é um desafio quase impossível. Sem documentos, sem recursos para pagar taxas escolares e sem garantias legais, 
+    muitas acabam privadas do direito básico à educação. Além disso, a falta de matrícula escolar as deixa em uma situação de vulnerabilidade e ilegalidade no país.<br><br>
+    O projeto *Sementes de Sabedoria* atua garantindo que essas crianças tenham acesso à escola. 
+    Facilitamos todo o processo burocrático, conseguimos garantidores locais e, graças ao bom relacionamento que desenvolvemos com uma escola, 
+    conseguimos matricular e oferecer bolsas e materiais escolares para mais de 50 crianças no último ano.<br><br>
+    Além do ensino formal, essas crianças também participam do nosso *Learning Center* no contraturno escolar, onde recebem reforço educacional e aprendizado bíblico. 
+    Agora, precisamos de recursos para garantir a continuidade das bolsas para o próximo ano letivo, que inicia em maio.`,
+    acoes: [
+        "Intermediação e matrícula de crianças refugiadas birmanesas na escola",
+        "Fornecimento de bolsas de estudo e kits de material escolar",
+        "Acompanhamento educacional no Learning Center no contraturno escolar"
+    ],
+    recursos: "Precisamos de recursos para cobrir os custos das bolsas e materiais escolares do próximo ano letivo, além de apoio para processos burocráticos e documentação.",
+    termometro: 25
+},
+    fazenda: {
+    titulo: "Colhendo Fé",
+    img: "imagens/fazenda hannah.png",
+    texto: `<i>“Ordenou o Senhor Deus ao homem, dizendo: De toda árvore do jardim comerás livremente.” – Gênesis 2:16</i><br><br>
+    O projeto *Colhendo Fé* nasceu para capacitar comunidades em Mianmar no manejo agrícola e agropecuário, promovendo segurança alimentar e geração de renda para famílias em situação de vulnerabilidade. 
+    Em parceria com o programa *Harvesting* da *Nação da Cruz*, estabelecemos uma fazenda-escola, onde ensinamos práticas de cultivo sustentável e criação animal, além de implantar esses sistemas produtivos nas vilas.<br><br>
+    Até antes do início da guerra, mantínhamos uma fazenda de produção de ovos com quase 1.000 galinhas, utilizando um sistema orgânico e *Free Range*, além de termos desenvolvido uma ração própria de baixo custo – um dos maiores desafios da criação animal na região.<br><br>
+    Infelizmente, devido ao agravamento da guerra e ao fechamento das fronteiras de Mianmar, o projeto está temporariamente inativo. 
+    No entanto, seguimos orando e esperando a oportunidade de retomá-lo, pois sabemos que a agricultura sustentável é um meio poderoso para transformar comunidades e levar esperança às vilas mais isoladas.`,
+    acoes: [
+        "Treinamento em manejo agrícola e agropecuário para moradores de vilas",
+        "Implantação de sistemas produtivos sustentáveis para segurança alimentar",
+        "Capacitação para geração de renda através da agricultura"
+    ],
+    recursos: "Atualmente, o projeto está pausado devido à guerra. Precisamos de recursos para reativá-lo assim que as condições permitirem, incluindo insumos agrícolas, equipamentos e infraestrutura.",
+    termometro: 0
+},
+     ingles: {
+    titulo: "Hannah English Course",
+    img: "imagens/ingles.png",
+    texto: `<i>“Ide por todo o mundo, pregai o evangelho a toda criatura.” – Marcos 16:15</i><br><br> 
+O *Hannah English Course* não é apenas um curso de inglês, mas uma ferramenta missionária inovadora. 
+Através dele, alunos aprendem inglês enquanto mergulham na Palavra de Deus, tornando-se fluentes na língua e fortalecidos na fé. 
+Esse aplicativo foi desenvolvido para apoiar o ensino de inglês nos nossos *Learning Centers* e facilitar a expansão do projeto para novos polos missionários no sudoeste asiático.<br><br>
+Imagine um aplicativo que ensina inglês de forma divertida, interativa e alinhada ao CEFR (Quadro Europeu Comum de Referência para Línguas), 
+enquanto transmite valores cristãos e aprofunda o conhecimento bíblico. Esse é o *Hannah English Course* – um curso gamificado que integra histórias da Bíblia, músicas, vídeos e a inteligência artificial do *Robô Samuel* para tornar cada aula única e cativante.<br><br>
+A protagonista *Hannah* conduz essa jornada linguística, convidando crianças, jovens e adultos a explorarem o universo do inglês ao lado dos grandes ensinamentos da Palavra de Deus.<br><br>
+Em um segundo momento, planejamos disponibilizar o aplicativo no Brasil para que qualquer pessoa possa aprender inglês e, ao mesmo tempo, contribuir para o campo missionário. 
+Cada inscrição no curso ajudará a financiar bolsas de estudo para crianças refugiadas, garantindo que elas também tenham acesso ao ensino do inglês e da Bíblia. Dessa forma, o aprendizado se torna um ato de impacto e transformação global.<br><br>
+
+<b>📌 Quer conhecer mais sobre o Hannah English Course? Acesse:</b> <a href="https://hannahenglishcourse.vercel.app/" target="_blank"><u>hannahenglishcourse.vercel.app</u></a>`,
+    
+    acoes: [
+        "Ensino de inglês através da Bíblia, como ferramenta evangelística e missionária",
+        "Desenvolvimento de uma plataforma gamificada com histórias bíblicas, músicas e vídeos",
+        "Expansão do projeto para novos Learning Centers no sudoeste asiático"
+    ],
+    recursos: "Atualmente, estamos abrindo um novo Learning Center no Camboja que utilizará esse aplicativo. Precisamos de recursos para manter o missionário no Camboja, contratar um tutor e adquirir 20 notebooks (US$100 cada) para iniciar as aulas em abril.",
+    termometro: 10
+},
+    food: {
+    titulo: "Mesa de Bênçãos",
+    img: "imagens/food hannah.png",
+    texto: "<i>“Porque tive fome, e me destes de comer; tive sede, e me destes de beber; era estrangeiro, e me hospedastes.” – Mateus 25:35</i><br><br>A alimentação é essencial para a vida, especialmente para aqueles que enfrentam os horrores da guerra e da pobreza extrema. O Mesa de Bênçãos busca demonstrar o amor de Cristo, proporcionando sustento e esperança às famílias mais vulneráveis. Nosso objetivo é levar alívio físico e espiritual, suprindo a fome e compartilhando o Evangelho.",
+    acoes: [
+        "Doação de cestas básicas entre a população carente do norte da Tailândia, com foco em imigrantes de Mianmar, país devastado pela guerra",
+        "Envio de cestas básicas para acampamentos de refugiados em Mianmar, atendendo principalmente famílias com crianças",
+        "Oferecemos lanche durante a semana para as crianças do Learning Center e almoço aos sábados, culminando em um culto de celebração"
+    ],
+    recursos: "Precisamos de doações para a compra de alimentos e verba para logística e transporte.",
+    termometro: 20
+},
       his: {
         titulo: "Centro de Aprendizado HIS",
         img: "imagens/HIS hannah.png",
@@ -858,7 +886,7 @@
 
       document.getElementById('detalhes-titulo').textContent = dados.titulo;
       document.getElementById('detalhes-img').src = dados.img;
-      document.getElementById('detalhes-texto').textContent = dados.texto;
+      document.getElementById('detalhes-texto').innerHTML = dados.texto;
 
       // Lista de ações
       const ulAcoes = document.getElementById('detalhes-acoes-list');
