--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -977,7 +977,7 @@ A protagonista Hannah conduz essa jornada linguística, convidando crianças, jo
 
 Em um segundo momento, planejamos disponibilizar o aplicativo no Brasil para que qualquer pessoa possa aprender inglês e, ao mesmo tempo, contribuir para o campo missionário. Cada inscrição no curso ajudará a financiar bolsas de estudo para crianças refugiadas, garantindo que elas também tenham acesso ao ensino do inglês e da Bíblia. Dessa forma, o aprendizado se torna um ato de impacto e transformação global.
 
-<b>📌 Quer conhecer mais sobre o Hannah English Course?</b> Acesse: <a href="https://hannahenglishcourse.vercel.app/" target="_blank">hannahenglishcourse.vercel.app</a>
+<br><br>📌 <b>Quer conhecer mais sobre o Hannah English Course?</b> <br>Acesse: <u><a href="https://hannahenglishcourse.vercel.app/" target="_blank">hannahenglishcourse.vercel.app</a></u>
         `,
           en: `
 <i>“Go into all the world and preach the gospel to all creation.” – Mark 16:15</i><br><br>
@@ -989,7 +989,7 @@ Hannah, the main character, guides this linguistic journey, inviting children, y
 
 In a second phase, we plan to make the app available in Brazil so that anyone can learn English while also contributing to the mission field. Each course enrollment will help fund scholarships for refugee children, ensuring that they too have access to learning English and the Bible. In this way, learning becomes an act of global impact and transformation.
 
-<b>📌 Want to learn more about Hannah English Course?</b> Visit: <a href="https://hannahenglishcourse.vercel.app/" target="_blank">hannahenglishcourse.vercel.app</a>
+<br><br>📌 <b>Want to learn more about Hannah English Course?</b> <br>Visit: <u><a href="https://hannahenglishcourse.vercel.app/" target="_blank">hannahenglishcourse.vercel.app</a></u>
         `
         },
         acoes: {
