--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -284,9 +284,9 @@
       max-width: 1000px;
       margin: 40px auto;
       overflow: hidden; /* oculta a barra de rolagem original */
-      background: rgba(255, 255, 255, 0.5);
+      background: transparent;
       border-radius: 10px;
-      padding: 10px 0;
+      padding: 0;
     }
 
     .carousel-track {
@@ -304,7 +304,7 @@
     }
 
     .carousel-item {
-      background-color: #fff;
+      background-color: transparent;
       border-radius: 6px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       text-align: center;
