--- a/Carrossel/projetos flutuante.html
+++ b/Carrossel/projetos flutuante.html
@@ -256,7 +256,11 @@
       flex-direction: column; /* Alinha itens na vertical */
       align-items: center; /* Centraliza na horizontal */
       justify-content: center; /* Centraliza na vertical */
-      text-align: center;
+      text-align: center;  
+      margin-bottom: 200px; /* Ajuste o valor conforme necessário */    
+
+      /* Para suportar posicionar o carrossel sobre a imagem: */
+      position: relative;
     }
 
     #pagina-projetos-hero h1 {
@@ -280,13 +284,20 @@
 
     /* Carrossel Horizontal (scroll + arrastar) */
     .carousel-container {
-      position: relative;
-      max-width: 1000px;
-      margin: 40px auto;
-      overflow: hidden; /* oculta a barra de rolagem original */
-      background: none;
+      /* Removemos o margin: 40px auto e mudamos para position absolute */
+      position: absolute;
+      /* Ajuste a posição conforme desejar (top/bottom). Aqui como exemplo: */
+      bottom: -20%;
+      left: 50%;
+      transform: translateX(-50%);
+
+      background: transparent !important; /* Removendo qualquer faixa branca */
       border-radius: 10px;
       padding: 10px 0;
+      width: 90%;   /* para não ficar cortado */
+      max-width: 1000px;
+      overflow: hidden; /* para o track */
+      z-index: 10; /* Garante que fique acima do fundo */
     }
 
     .carousel-track {
@@ -357,7 +368,7 @@
     /* CONTAINER ESCONDIDO (DETALHES DO PROJETO) */
     #container-detalhes {
       display: none;
-      width: 100%;
+      width: 100%;     
       padding: 40px 20px;
       background: url("imagens/fundoconteinerescondido.png") center center / cover no-repeat;
       background-attachment: fixed; /* Efeito parallax */
@@ -473,7 +484,10 @@
 
     @media (max-width: 768px) {
       .carousel-container {
-        margin: 20px auto;
+        width: 95%;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 5%;
       }
       .detalhes-conteudo {
         flex-direction: column;
@@ -590,7 +604,7 @@
     Donate Now
   </button>
 
-  <!-- TÍTULO PARALLAX (ocupa 100vh) -->
+  <!-- SEÇÃO HERO (ocupa 100vh) + CARROSSEL ABSOLUTO POR CIMA -->
   <section id="pagina-projetos-hero">
     <h1>
       <span class="lang-pt">Projetos Hannah</span>
@@ -600,86 +614,86 @@
       <span class="lang-pt">Compartilhando o Evangelho com Amor e Cuidado Integral</span>
       <span class="lang-en">Sharing the Gospel with Love and Holistic Care</span>
     </p>
-  </section>
 
-  <!-- CARROSSEL HORIZONTAL -->
-  <div class="carousel-container">
-    <button class="carousel-btn carousel-btn-prev" id="btn-prev">&#10094;</button>
+    <!-- CARROSSEL HORIZONTAL (AGORA DENTRO DO HERO) -->
+    <div class="carousel-container">
+      <button class="carousel-btn carousel-btn-prev" id="btn-prev">&#10094;</button>
 
-    <!-- Faixa onde ficam os itens do carrossel -->
-    <div class="carousel-track" id="carousel-track">
-      <!-- ITEM 1: Lar de Siló / Shiloh’s Home -->
-      <div class="carousel-item" onclick="mostrarDetalhes('abrigo')">
-        <img src="imagens/abrigo hannah.png" alt="Lar de Siló / Shiloh’s Home" />
-        <h3>
-          <span class="lang-pt">Lar de Siló</span>
-          <span class="lang-en">Shiloh’s Home</span>
-        </h3>
+      <!-- Faixa onde ficam os itens do carrossel -->
+      <div class="carousel-track" id="carousel-track">
+        <!-- ITEM 1: Lar de Siló / Shiloh’s Home -->
+        <div class="carousel-item" onclick="mostrarDetalhes('abrigo')">
+          <img src="imagens/abrigo hannah.png" alt="Lar de Siló / Shiloh’s Home" />
+          <h3>
+            <span class="lang-pt">Lar de Siló</span>
+            <span class="lang-en">Shiloh’s Home</span>
+          </h3>
+        </div>
+
+        <!-- ITEM 2: Sementes de Sabedoria / Seeds of Wisdom -->
+        <div class="carousel-item" onclick="mostrarDetalhes('bolsa')">
+          <img src="imagens/bolsa escola hannah.png" alt="Sementes de Sabedoria / Seeds of Wisdom" />
+          <h3>
+            <span class="lang-pt">Sementes de Sabedoria</span>
+            <span class="lang-en">Seeds of Wisdom</span>
+          </h3>
+        </div>
+
+        <!-- ITEM 3: Colhendo Fé / Harvesting Faith -->
+        <div class="carousel-item" onclick="mostrarDetalhes('fazenda')">
+          <img src="imagens/fazenda hannah.png" alt="Colhendo Fé / Harvesting Faith" />
+          <h3>
+            <span class="lang-pt">Colhendo Fé</span>
+            <span class="lang-en">Harvesting Faith</span>
+          </h3>
+        </div>
+
+        <!-- ITEM 4: Hannah English Course -->
+        <div class="carousel-item" onclick="mostrarDetalhes('ingles')">
+          <img src="imagens/ingles.png" alt="Hannah English Course" />
+          <h3>Hannah English Course</h3>
+        </div>
+
+        <!-- ITEM 5: Mesa de Bênçãos / Blessing Table -->
+        <div class="carousel-item" onclick="mostrarDetalhes('food')">
+          <img src="imagens/food hannah.png" alt="Mesa de Bênçãos / Blessing Table" />
+          <h3>
+            <span class="lang-pt">Mesa de Bênçãos</span>
+            <span class="lang-en">Blessing Table</span>
+          </h3>
+        </div>
+
+        <!-- ITEM 6: Centro de Aprendizado HIS / HIS Learning Center -->
+        <div class="carousel-item" onclick="mostrarDetalhes('his')">
+          <img src="imagens/HIS hannah.png" alt="Centro de Aprendizado HIS / HIS Learning Center" />
+          <h3>
+            <span class="lang-pt">Centro de Aprendizado HIS</span>
+            <span class="lang-en">HIS Learning Center</span>
+          </h3>
+        </div>
+
+        <!-- ITEM 7: Mãos que Curam / Healing Hands -->
+        <div class="carousel-item" onclick="mostrarDetalhes('saude')">
+          <img src="imagens/saude hannah.png" alt="Mãos que Curam / Healing Hands" />
+          <h3>
+            <span class="lang-pt">Mãos que Curam</span>
+            <span class="lang-en">Healing Hands</span>
+          </h3>
+        </div>
+
+        <!-- ITEM 8: Igrejas Hannah / Hannah’s Church Planting -->
+        <div class="carousel-item" onclick="mostrarDetalhes('igreja')">
+          <img src="imagens/igreja hannah.png" alt="Igrejas Hannah / Hannah’s Church Planting" />
+          <h3>
+            <span class="lang-pt">Igrejas Hannah</span>
+            <span class="lang-en">Hannah’s Church Planting</span>
+          </h3>
+        </div>
       </div>
 
-      <!-- ITEM 2: Sementes de Sabedoria / Seeds of Wisdom -->
-      <div class="carousel-item" onclick="mostrarDetalhes('bolsa')">
-        <img src="imagens/bolsa escola hannah.png" alt="Sementes de Sabedoria / Seeds of Wisdom" />
-        <h3>
-          <span class="lang-pt">Sementes de Sabedoria</span>
-          <span class="lang-en">Seeds of Wisdom</span>
-        </h3>
-      </div>
-
-      <!-- ITEM 3: Colhendo Fé / Harvesting Faith -->
-      <div class="carousel-item" onclick="mostrarDetalhes('fazenda')">
-        <img src="imagens/fazenda hannah.png" alt="Colhendo Fé / Harvesting Faith" />
-        <h3>
-          <span class="lang-pt">Colhendo Fé</span>
-          <span class="lang-en">Harvesting Faith</span>
-        </h3>
-      </div>
-
-      <!-- ITEM 4: Hannah English Course -->
-      <div class="carousel-item" onclick="mostrarDetalhes('ingles')">
-        <img src="imagens/ingles.png" alt="Hannah English Course" />
-        <h3>Hannah English Course</h3>
-      </div>
-
-      <!-- ITEM 5: Mesa de Bênçãos / Blessing Table -->
-      <div class="carousel-item" onclick="mostrarDetalhes('food')">
-        <img src="imagens/food hannah.png" alt="Mesa de Bênçãos / Blessing Table" />
-        <h3>
-          <span class="lang-pt">Mesa de Bênçãos</span>
-          <span class="lang-en">Blessing Table</span>
-        </h3>
-      </div>
-
-      <!-- ITEM 6: Centro de Aprendizado HIS / HIS Learning Center -->
-      <div class="carousel-item" onclick="mostrarDetalhes('his')">
-        <img src="imagens/HIS hannah.png" alt="Centro de Aprendizado HIS / HIS Learning Center" />
-        <h3>
-          <span class="lang-pt">Centro de Aprendizado HIS</span>
-          <span class="lang-en">HIS Learning Center</span>
-        </h3>
-      </div>
-
-      <!-- ITEM 7: Mãos que Curam / Healing Hands -->
-      <div class="carousel-item" onclick="mostrarDetalhes('saude')">
-        <img src="imagens/saude hannah.png" alt="Mãos que Curam / Healing Hands" />
-        <h3>
-          <span class="lang-pt">Mãos que Curam</span>
-          <span class="lang-en">Healing Hands</span>
-        </h3>
-      </div>
-
-      <!-- ITEM 8: Igrejas Hannah / Hannah’s Church Planting -->
-      <div class="carousel-item" onclick="mostrarDetalhes('igreja')">
-        <img src="imagens/igreja hannah.png" alt="Igrejas Hannah / Hannah’s Church Planting" />
-        <h3>
-          <span class="lang-pt">Igrejas Hannah</span>
-          <span class="lang-en">Hannah’s Church Planting</span>
-        </h3>
-      </div>
+      <button class="carousel-btn carousel-btn-next" id="btn-next">&#10095;</button>
     </div>
-
-    <button class="carousel-btn carousel-btn-next" id="btn-next">&#10095;</button>
-  </div>
+  </section>
 
   <!-- CONTAINER ESCONDIDO COM DETALHES -->
   <section id="container-detalhes">
