--- a/Carrossel/projetos - Copy.html
+++ b/Carrossel/projetos - Copy.html
@@ -33,7 +33,7 @@
 
     body {
       font-family: 'Open Sans', Arial, sans-serif;
-      background-color: #ffffff;
+      background-color: #F4F7F4;
       color: #000000;
       line-height: 1.6;
     }
@@ -284,7 +284,7 @@
       max-width: 1000px;
       margin: 40px auto;
       overflow: hidden; /* oculta a barra de rolagem original */
-      background: rgba(255, 255, 255, 0.5);
+      background: none;
       border-radius: 10px;
       padding: 10px 0;
     }
