--- a/Carrossel/doe - Copy.html
+++ b/Carrossel/doe - Copy.html
@@ -354,7 +354,7 @@
       right: 10px;
     }
 
-    /* CONTAINER ESCONDIDO (DETALHES) */
+    /* CONTAINER DE DETALHES */
     #container-detalhes {
       display: none;
       width: 100%;
@@ -370,6 +370,7 @@
       border-radius: 10px;
       padding: 20px;
       position: relative;
+      text-align: center; /* Centraliza internamente */
     }
     #container-detalhes .close-detalhes {
       position: absolute;
@@ -385,118 +386,49 @@
       font-weight: bold;
     }
     #container-detalhes h2 {
-      text-align: center;
       margin-bottom: 20px;
       font-family: 'Montserrat', sans-serif;
       color: var(--primaria);
+      font-size: 1.8rem;
     }
     .detalhes-conteudo {
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
       gap: 20px;
     }
 
-    /* Conteúdo de texto dentro do container de detalhes */
-    .detalhes-texto {
-      flex: 1 1 100%;
-    }
-
-    /* Estilos originais para seção removida visualmente (imagem, ações, recursos, etc.) */
-  .detalhes-img {
-    display: flex;
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
-    width: 100%;
-    text-align: center; /* Para garantir que o conteúdo fique centralizado */
-}
-   .detalhes-img img {
-    max-width: 50%; /* Reduz o tamanho da imagem */
-    height: auto; /* Mantém a proporção original */
-    border-radius: 8px;
-    display: block; /* Remove espaços extras ao redor da imagem */
-    margin: 0 auto; 
-}
-    .detalhes-acoes {
-      margin-top: 20px;
-    }
-    .detalhes-acoes ul {
-      list-style: inside disc;
-    }
-    .detalhes-acoes ul li {
-      margin-bottom: 5px;
-    }
-    .recursos-necessarios {
-      margin-top: 20px;
-    }
-    .termometro {
-      width: 100%;
-      background-color: #ddd;
-      height: 20px;
-      border-radius: 10px;
-      position: relative;
-      margin-top: 10px;
-      overflow: hidden;
-    }
-    .termometro-preenchimento {
-      height: 100%;
-      background-color: var(--primaria);
-      width: 50%; /* valor inicial fake */
-      transition: width 0.3s ease;
-    }
-    .status-recursos {
-      margin-top: 10px;
-    }
-    .status-recursos h5 {
-      font-size: 1rem;
-      font-family: 'Montserrat', sans-serif;
-      margin-bottom: 5px;
-      color: var(--primaria);
-    }
-    .status-recursos p {
-      margin: 5px 0 15px 0;
-      font-weight: 600;
-    }
-    .btn-doar {
-      display: inline-block;
-      background-color: var(--primaria);
-      color: var(--texto-claro);
-      border: none;
-      padding: 8px 16px;
-      border-radius: 6px;
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    .btn-doar:hover {
-      background-color: var(--secundaria);
-    }
-    .botao-ingles {
-      display: inline-block;
-      margin-top: 15px;
-    }
-
-    @media (max-width: 768px) {
-      .carousel-container {
-        margin: 20px auto;
-      }
-      .detalhes-conteudo {
-        flex-direction: column;
-      }
-      .detalhes-img,
-      .detalhes-texto {
-        max-width: 100%;
-        flex: 1 1 100%;
-      }
-  .detalhes-img img {
-        max-width: 70%; /* Ajusta a largura da imagem para telas menores */
-    }
-  }
-@media (max-width: 480px) {
+    /* Imagem centralizada e com tamanho adequado */
     .detalhes-img img {
-        max-width: 90%; /* Para telas muito pequenas, a imagem ocupa quase toda a largura */
+      max-width: 300px; /* Ajuste conforme necessário */
+      width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+      border-radius: 8px;
     }
-}
+
+    /* Texto centralizado */
+    .detalhes-texto {
+      text-align: center;
+      margin-top: 10px;
+      padding: 0 20px;
+    }
+    .detalhes-texto p {
+      margin-bottom: 20px;
+    }
+    .detalhes-texto h3,
+    .detalhes-texto h4,
+    .detalhes-texto h5 {
+      margin: 15px 0 10px 0;
+    }
+
+    /* Dimensão adequada para imagens de pagamento e WhatsApp */
+    .detalhes-texto img {
+      max-width: 180px;
+      height: auto;
+      margin: 10px auto;
+    }
 
     /* CLASSES PARA MOSTRAR/OCULTAR OS TEXTOS EM CADA IDIOMA */
     .lang-pt {
@@ -651,7 +583,7 @@
     <button class="carousel-btn carousel-btn-next" id="btn-next">&#10095;</button>
   </div>
 
-  <!-- CONTAINER ESCONDIDO COM DETALHES -->
+  <!-- CONTAINER DE DETALHES -->
   <section id="container-detalhes">
     <div class="detalhes-inner">
       <button class="close-detalhes" onclick="fecharDetalhes()">X</button>
@@ -661,40 +593,14 @@
 
       <div class="detalhes-conteudo">
 
-        <!-- CONTEÚDO DE TEXTO (DETALHES) -->
+        <!-- IMAGEM -->
+        <div class="detalhes-img">
+          <img id="detalhes-img" src="" alt="Imagem do Item" />
+        </div>
+
+        <!-- TEXTO -->
         <div class="detalhes-texto">
           <p id="detalhes-texto"></p>
-
-          <!-- ELEMENTOS ORIGINAIS COMENTADOS (imagem, ações, recursos, etc.) -->
-          <!--
-          <div class="detalhes-img">
-            <img id="detalhes-img" src="" alt="Imagem Projeto" />
-          </div>
-
-          <div class="detalhes-acoes">
-            <h4 id="detalhes-acoes-titulo">Ações do Projeto:</h4>
-            <ul id="detalhes-acoes-list"></ul>
-          </div>
-
-          <div class="recursos-necessarios">
-            <h4 id="detalhes-recursos-titulo">Recursos Necessários:</h4>
-            <p id="detalhes-recursos-texto"></p>
-            <div class="status-recursos">
-              <h5 id="detalhes-progresso-titulo">Progresso de Arrecadação</h5>
-              <div class="termometro">
-                <div class="termometro-preenchimento" id="detalhes-termometro"></div>
-              </div>
-              <p id="status-descricao"></p>
-              <button class="btn-doar" id="detalhes-btn-doar">Doar</button>
-            </div>
-          </div>
-
-          <div class="botao-ingles" id="btn-ingles-container" style="display:none;">
-            <a href="https://hannahenglishcourse.vercel.app/" target="_blank">
-              <img src="imagens/convite.gif" alt="Convite para o Centro de Aprendizado" />
-            </a>
-          </div>
-          -->
 
           <!-- OPÇÕES DE PAGAMENTO -->
           <h3>
@@ -743,9 +649,13 @@
           </h5>
           <div>
             <img src="imagens/bangkok.png" alt="Bangkok Bank" />
-            <p>BangKok Bank  SWIFT code: BKKBTHBK Branch 0398 MaeSai<br>
-            Account No. 398-099283-2<br>
-            Account Name: MRS CARLA REGINA MAGDALENO ROQUETTE</p>
+            <p>
+              BangKok Bank<br>  
+              SWIFT code: BKKBTHBK<br> 
+              Branch 0398 (MaeSai)<br>
+              Account No. 398-099283-2<br>
+              Account Name: MRS CARLA REGINA MAGDALENO ROQUETTE
+            </p>
           </div>
 
           <!-- Subtítulo 3: Paypal -->
@@ -882,9 +792,10 @@
     /* VARIÁVEL DE CONTROLE DO IDIOMA ATUAL */
     let currentLang = 'pt';
 
-    /* NOVOS ITENS DE DOAÇÃO (APENAS TÍTULO E TEXTO PROVISÓRIO) */
+    /* ITENS DE DOAÇÃO (TÍTULO, TEXTO E IMAGEM) */
     const doacoesData = {
       apadrinhamento: {
+        img: "imagens/doe1.png",
         titulo: {
           pt: "Apadrinhamento",
           en: "Sponsorship"
@@ -895,6 +806,7 @@
         }
       },
       projetos: {
+        img: "imagens/doe2.png",
         titulo: {
           pt: "Projetos",
           en: "Projects"
@@ -905,6 +817,7 @@
         }
       },
       campanha: {
+        img: "imagens/doe3.png",
         titulo: {
           pt: "Campanha Especial",
           en: "Special Campaign"
@@ -921,9 +834,12 @@
       const dados = doacoesData[itemId];
       if (!dados) return;
 
-      // Ajusta título e texto
+      // Título e texto
       document.getElementById('detalhes-titulo').textContent = dados.titulo[currentLang];
       document.getElementById('detalhes-texto').textContent = dados.texto[currentLang];
+
+      // Imagem
+      document.getElementById('detalhes-img').src = dados.img;
 
       // Exibe container de detalhes
       document.getElementById('container-detalhes').style.display = 'block';
