--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -24,7 +24,7 @@
 
     html, body {
       width: 100%;
-      overflow-x: hidden; /* Evita scroll horizontal */
+      overflow-x: hidden; /* Evita scroll horizontal no body */
     }
 
     html {
@@ -287,22 +287,22 @@
     /* Carrossel Horizontal (scroll + arrastar) */
     .carousel-container {
       position: relative;
-      max-width: 900px; /* Ajuste para evitar espaço extra */
+      max-width: 900px; 
       margin: 40px auto;
       border-radius: 10px;
       padding: 10px 0;
     }
 
-    /* Desabilitamos a rolagem horizontal e centralizamos os itens */
+    /* Reabilitado overflow-x para permitir rolagem no celular */
     .carousel-track {
       display: flex;
       gap: 20px;
-      justify-content: center;
       padding: 20px;
-      overflow-x: hidden; /* Sem scroll */
+      overflow-x: auto; /* scroll horizontal */
       scroll-behavior: smooth;
       scrollbar-width: none;
       -ms-overflow-style: none;
+      justify-content: flex-start; /* Alinha os itens à esquerda */
     }
     .carousel-track::-webkit-scrollbar {
       display: none; 
@@ -331,9 +331,9 @@
       color: var(--primaria);
     }
 
-    /* Botões de navegação do carrossel - escondidos porque só temos 3 itens */
+    /* Botões de navegação do carrossel - ocultos (só 3 itens) */
     .carousel-btn {
-      display: none; /* Ocultando setas */
+      display: none; 
     }
 
     /* CONTAINER DE DETALHES */
@@ -382,7 +382,7 @@
 
     /* Imagem centralizada e com tamanho adequado */
     .detalhes-img img {
-      max-width: 300px; /* Ajuste conforme necessário */
+      max-width: 300px; 
       width: 100%;
       height: auto;
       display: block;
@@ -637,7 +637,7 @@
           <div>
             <img src="imagens/bangkok.png" alt="Bangkok Bank" />
             <p>
-               BangKok Bank<br>  
+              BangKok Bank<br>  
               SWIFT code: BKKBTHBK<br> 
               Branch 0398 (MaeSai)<br>
               Account No. 398-099283-2<br>
