--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -234,6 +234,9 @@
       .donate-float-mobile {
         display: none;
       }
+      .carousel-track {
+        justify-content: flex-start;
+      }
       */
       footer {
         padding: 20px 10px 100px 10px;
@@ -302,7 +305,7 @@
       scroll-behavior: smooth;
       scrollbar-width: none;
       -ms-overflow-style: none;
-      justify-content: flex-start; /* Alinha os itens à esquerda */
+      justify-content: center;
     }
     .carousel-track::-webkit-scrollbar {
       display: none; 
