--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -236,7 +236,7 @@
       }
   */
       .carousel-track {
-        justify-content: flex-start;
+        justify-content: flex-start !important;
       }    
       footer {
         padding: 20px 10px 100px 10px;
