--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -393,20 +393,51 @@
       border-radius: 8px;
     }
 
-    /* Texto centralizado */
-    .detalhes-texto {
-      text-align: center;
-      margin-top: 10px;
-      padding: 0 20px;
-    }
-    .detalhes-texto p {
-      margin-bottom: 20px;
-    }
-    .detalhes-texto h3,
-    .detalhes-texto h4,
-    .detalhes-texto h5 {
-      margin: 15px 0 10px 0;
-    }
+   /* Texto centralizado */
+.detalhes-texto {
+  text-align: center;
+  max-width: 800px; /* Define uma largura máxima para evitar textos muito espalhados */
+  margin: 20px auto; /* Centraliza horizontalmente */
+  padding: 20px;
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.detalhes-texto p {
+  margin-bottom: 20px;
+  font-size: 18px;
+  color: #333; /* Deixa o texto mais legível */
+}
+
+.detalhes-texto h3,
+.detalhes-texto h4,
+.detalhes-texto h5 {
+  margin: 15px 0 10px 0;
+  font-size: 20px;
+  color: #445a45;
+}
+
+/* Ajusta listas dentro do texto */
+.detalhes-texto ul {
+  list-style: none; /* Remove os marcadores padrão */
+  padding: 0;
+}
+
+.detalhes-texto ul li {
+  font-size: 18px;
+  margin: 8px 0;
+  padding-left: 25px;
+  position: relative;
+}
+
+/* Adiciona um marcador personalizado antes de cada item da lista */
+.detalhes-texto ul li::before {
+  content: "✔";
+  color: #658161; /* Cor do marcador */
+  font-weight: bold;
+  position: absolute;
+  left: 0;
+}
 
     /* Dimensão adequada para imagens de pagamento e WhatsApp */
     .detalhes-texto img {
@@ -593,16 +624,16 @@
           <p id="detalhes-texto"></p>
 
           <!-- OPÇÕES DE PAGAMENTO -->
-          <h3>
+          <h2>
             <span class="lang-pt">Opções de Pagamento</span>
             <span class="lang-en">Payment Options</span>
-          </h3>
+          </h2>
 
-          <!-- Subtítulo 1: No Brasil / In Brazil -->
-          <h4>
-            <span class="lang-pt">No Brasil</span>
-            <span class="lang-en">In Brazil</span>
-          </h4>
+       <!-- Subtítulo 1: NO BRASIL / IN BRAZIL -->
+<h3>
+  <span class="lang-pt"><u>NO BRASIL</u></span>
+  <span class="lang-en"><u>IN BRAZIL</u></span>
+</h3>
 
           <!-- BANCOS -->
           <h5>
@@ -627,10 +658,10 @@
           </div>
 
           <!-- Subtítulo 2: Internacional / International -->
-          <h4>
-            <span class="lang-pt">Internacional (Fora do Brasil)</span>
-            <span class="lang-en">International (Outside Brazil)</span>
-          </h4>
+          <h3>
+            <span class="lang-pt"><u>INTERNACIONAL (Fora do Brasil)</u></span>
+            <span class="lang-en"><u>INTERNATIONAL (Outside Brazil)</u></span>
+          </h3>
 
           <!-- Banco (Bangkok) -->
           <h5>
@@ -649,7 +680,7 @@
           </div>
 
           <!-- Subtítulo 3: Paypal -->
-          <h4>PAYPAL</h4>
+          <h3><u>PAYPAL</u></h3>
           <div>
             <img src="imagens/botao_paypal.png" alt="PayPal" />
           </div>
@@ -790,42 +821,108 @@
     /* VARIÁVEL DE CONTROLE DO IDIOMA ATUAL */
     let currentLang = 'pt';
 
-    /* ITENS DE DOAÇÃO (TÍTULO, TEXTO E IMAGEM) */
-    const doacoesData = {
-      apadrinhamento: {
-        img: "imagens/doe1.png",
-        titulo: {
-          pt: "Apadrinhamento",
-          en: "Sponsorship"
-        },
-        texto: {
-          pt: "Texto provisório sobre a importância do apadrinhamento para crianças e famílias. Aqui você pode explicar como funciona o processo de contribuir mensalmente e mudar vidas.",
-          en: "Placeholder text about the importance of sponsoring children and families. Here you can explain how the monthly contribution process works and how it changes lives."
-        }
-      },
-      projetos: {
-        img: "imagens/doe2.png",
-        titulo: {
-          pt: "Projetos",
-          en: "Projects"
-        },
-        texto: {
-          pt: "Texto provisório sobre projetos sociais e evangelísticos mantidos pela fundação. Descreva sucintamente como cada contribuição ajuda a realizar essas iniciativas.",
-          en: "Placeholder text about the social and evangelistic projects run by the foundation. Briefly describe how each donation helps to carry out these initiatives."
-        }
-      },
-      campanha: {
-        img: "imagens/doe3.png",
-        titulo: {
-          pt: "Campanha Especial",
-          en: "Special Campaign"
-        },
-        texto: {
-          pt: "Texto provisório sobre uma campanha especial (por exemplo, de Natal, Páscoa ou qualquer outra ocasião). Explique os objetivos e como as doações serão aplicadas.",
-          en: "Placeholder text about a special campaign (e.g., Christmas, Easter, or any other occasion). Explain its goals and how donations will be used."
-        }
-      }
-    };
+   /* ITENS DE DOAÇÃO (TÍTULO, TEXTO E IMAGEM) */
+const doacoesData = {
+  apadrinhamento: {
+    img: "imagens/doe1.png",
+    titulo: {
+      pt: "Apadrinhamento",
+      en: "Sponsorship"
+    },
+    texto: {
+      pt: `
+        <h2>Transforme a vida de uma criança!</h2>
+
+        <p>
+            O <strong>apadrinhamento</strong> é uma oportunidade para mudar vidas, garantindo que uma criança em situação de vulnerabilidade possa estudar com dignidade. 
+            Com sua contribuição, a criança recebe:
+        </p>
+
+        <ul>
+            <strong>✔ Bolsa de estudos integral</strong></li>
+            <strong>✔ Material escolar</strong></li>
+            <strong>✔ Uniforme</strong></li>
+        </ul>
+
+        <h3>💰 Valor do apadrinhamento:</h3>
+        <p><strong>US$ 426/ano</strong> ou <strong>R$ 2.500/ano</strong> (<strong>R$ 209/mês</strong>)</p>
+
+        <h3>Como você pode ajudar?</h3>
+        <ul>
+            <strong>👨‍👩‍👧‍👦 Apadrinhamento integral:</strong> Assuma sozinho os custos de uma criança.</li>
+            <strong>🤝 Apadrinhamento coletivo:</strong> Contribua com um grupo de padrinhos.</li>
+        </ul>
+
+        <p>
+            Todos os padrinhos recebem <strong>fotos, vídeos e atualizações</strong> sobre a criança, independentemente do valor doado.
+        </p>
+
+        <p>
+            Para mais informações, entre em contato pelo <strong>WhatsApp:</strong> 
+      <a href="https://wa.me/66622634630?text=Ol%C3%A1,%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20apadrinhamento." target="_blank">
+                <img src="imagens/whatsapp.png" alt="WhatsApp" width="20">
+            </a>
+        </p>
+      `,
+      en: `
+        <h2>Sponsorship: Change a child's life!</h2>
+
+        <p>
+            <strong>Sponsorship</strong> is an opportunity to change lives by ensuring that a vulnerable child can study with dignity.
+            With your contribution, the child receives:
+        </p>
+
+        <ul>
+            <strong>✔ Full scholarship</strong></li>
+            <strong>✔ School supplies</strong></li>
+            <strong>✔ Uniform</strong></li>
+        </ul>
+
+        <h3>💰 Sponsorship cost:</h3>
+        <p><strong>US$ 426/year</strong> or <strong>R$ 2,500/year</strong> (<strong>R$ 209/month</strong>)</p>
+
+        <h3>How can you help?</h3>
+        <ul>
+            <strong>👨‍👩‍👧‍👦 Full sponsorship:</strong> Take full responsibility for a child's education.</li>
+            <strong>🤝 Collective sponsorship:</strong> Join a group of sponsors.</li>
+        </ul>
+
+        <p>
+            All sponsors receive <strong>photos, videos, and updates</strong> about the child, regardless of the amount donated.
+        </p>
+
+        <p>
+            For more information, contact us via <strong>WhatsApp:</strong> 
+            <a href="https://wa.me/66622634630" target="_blank">
+                <img src="imagens/whatsapp.png" alt="WhatsApp" width="20">
+            </a>
+        </p>
+      `
+    }
+  },
+  projetos: {
+    img: "imagens/doe2.png",
+    titulo: {
+      pt: "Projetos",
+      en: "Projects"
+    },
+    texto: {
+      pt: "Texto provisório sobre projetos sociais e evangelísticos mantidos pela fundação. Descreva sucintamente como cada contribuição ajuda a realizar essas iniciativas.",
+      en: "Placeholder text about the social and evangelistic projects run by the foundation. Briefly describe how each donation helps to carry out these initiatives."
+    }
+  },
+  campanha: {
+    img: "imagens/doe3.png",
+    titulo: {
+      pt: "Campanha Especial",
+      en: "Special Campaign"
+    },
+    texto: {
+      pt: "Texto provisório sobre uma campanha especial (por exemplo, de Natal, Páscoa ou qualquer outra ocasião). Explique os objetivos e como as doações serão aplicadas.",
+      en: "Placeholder text about a special campaign (e.g., Christmas, Easter, or any other occasion). Explain its goals and how donations will be used."
+    }
+  }
+};
 
     /* MOSTRAR DETALHES DO ITEM SELECIONADO */
     function mostrarDetalhes(itemId) {
@@ -834,7 +931,7 @@
 
       // Título e texto
       document.getElementById('detalhes-titulo').textContent = dados.titulo[currentLang];
-      document.getElementById('detalhes-texto').textContent = dados.texto[currentLang];
+      document.getElementById('detalhes-texto').innerHTML = dados.texto[currentLang];
 
       // Imagem
       document.getElementById('detalhes-img').src = dados.img;
