--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -911,17 +911,30 @@ const doacoesData = {
       en: "Placeholder text about the social and evangelistic projects run by the foundation. Briefly describe how each donation helps to carry out these initiatives."
     }
   },
-  campanha: {
-    img: "imagens/doe3.png",
-    titulo: {
-      pt: "Campanha Especial",
-      en: "Special Campaign"
-    },
-    texto: {
-      pt: "Texto provisório sobre uma campanha especial (por exemplo, de Natal, Páscoa ou qualquer outra ocasião). Explique os objetivos e como as doações serão aplicadas.",
-      en: "Placeholder text about a special campaign (e.g., Christmas, Easter, or any other occasion). Explain its goals and how donations will be used."
-    }
+ campanha: {
+  img: "imagens/doe3.png",
+  titulo: {
+    pt: "Campanha Especial",
+    en: "Special Campaign"
+  },
+  texto: { 
+    pt: `📢 <h2><strong>Precisamos de você para transformar vidas!</strong></h2><br><br> 
+    Até <strong>28 de fevereiro</strong>, temos um grande desafio: arrecadar fundos para a compra de <strong>20 tablets</strong> (US$ 100 cada) e dar início ao <strong>Learning Center no Camboja</strong>.<br><br> 
+    📖 <strong>Já temos todo o material necessário</strong>, mas sem os tablets, as crianças <strong>não poderão acessar o Hannah English Course</strong>, perdendo a chance de aprender <strong>inglês através da Bíblia</strong>.<br><br> 
+    💛 <strong>Sua doação pode fazer a diferença!</strong><br> 
+    Cada contribuição nos aproxima desse objetivo e permite que mais crianças tenham acesso à educação e à Palavra de Deus.<br><br> 
+    🙏 <strong>Ajude compartilhando!</strong><br> 
+    Se não puder contribuir diretamente, <strong>compartilhe esta campanha</strong> com amigos e familiares. Juntos, podemos alcançar essa meta e impactar muitas vidas!`, 
+
+    en: `📢 <strong>Be part of this mission – help us change lives!</strong><br><br> 
+    By <strong>February 28</strong>, we have a big challenge: raising funds to purchase <strong>20 tablets</strong> (US$ 100 each) and launch the <strong>Learning Center in Cambodia</strong>.<br><br> 
+    📖 <strong>We already have all the necessary materials</strong>, but without the tablets, the children <strong>won't be able to access the Hannah English Course</strong>, missing the opportunity to <strong>learn English through the Bible</strong>.<br><br> 
+    💛 <strong>Your donation can make all the difference!</strong><br> 
+    Every contribution brings us closer to this goal, giving more children access to education and the Word of God.<br><br> 
+    🙏 <strong>Help by sharing!</strong><br> 
+    If you can’t donate directly, <strong>spread the word</strong> to friends and family. Together, we can reach this goal and impact many lives!`
   }
+}
 };
 
     /* MOSTRAR DETALHES DO ITEM SELECIONADO */
