--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -1057,28 +1057,30 @@
       FUNÇÃO PARA COMPARTILHAR (navigator.share ou fallback WhatsApp)
       Recebe itemId e lang, gera URL com ?item=xxx&lang=yyy
     */
-   function shareItem(itemId, lang) {
+  function shareItem(itemId, lang) {
   const itemTitle = doacoesData[itemId].titulo[lang];
 
   // Mensagem padrão por idioma
   const customMessage = (lang === "pt") 
-    ? "Ajude a transformar vidas! Confira esta iniciativa da Fundação Hannah:"
-    : "Help transform lives! Check out this initiative from Hannah Foundation:";
+    ? "Ajude a transformar vidas! Compartilhe essa iniciativa da Fundação Hannah:"
+    : "Help transform lives! Share this initiative from Hannah Foundation:";
 
-  // Monta URL com parâmetros
-  const shareUrl = window.location.origin + window.location.pathname + `?item=${itemId}&lang=${lang}`;
-  
+  // Gera a URL correta com parâmetros
+  const shareUrl = `${window.location.origin}${window.location.pathname}?item=${itemId}&lang=${lang}`;
+
   const shareData = {
     title: itemTitle,
-    text: `${customMessage} ${itemTitle}`, // Mensagem personalizada + título do item
+    text: `${customMessage}\n\n${itemTitle}\n\n${shareUrl}`, // Adiciona a mensagem completa
     url: shareUrl
   };
 
   if (navigator.share) {
-    navigator.share(shareData).catch((err) => console.log(err));
+    navigator.share(shareData)
+      .then(() => console.log("Compartilhamento bem-sucedido"))
+      .catch((err) => console.log("Erro ao compartilhar:", err));
   } else {
     // Fallback para WhatsApp
-    const wUrl = "https://wa.me/?text=" + encodeURIComponent(shareData.text + " " + shareData.url);
+    const wUrl = "https://wa.me/?text=" + encodeURIComponent(shareData.text);
     window.open(wUrl, "_blank");
   }
 }
